--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
 
   <body data-gnl="o" class="bg" style="min-height:100vh;">
 
-    <div data-gnl="23 /24 kaplama">
+    <div data-gnl="23 /24 kap">
 
       <div data-gnl="o" class="beri-üst-2">
         <div data-gnl="uzun-ol o" data-ort="6">
