--- a/assets/deveb-s1n0/_sifirlama.scss
+++ b/assets/deveb-s1n0/_sifirlama.scss
@@ -83,11 +83,14 @@
       padding: 0;
       margin: 0;
 
-      li
-      {list-style-type: none;}
+      li{
+        list-style-type: none; 
+        padding:0;
+      }
 
-      ul
-      {margin-left: 15px;}
+      ul {
+        margin-left: 15px;
+      }
 
       h1, h2, h3, h4, h5, h6
       {margin: 0;}
