--- a/assets/deveb-s1n0/deveb.scss
+++ b/assets/deveb-s1n0/deveb.scss
@@ -1,3 +1,12 @@
+///////////////////////////////////////////////////////////////////////////////////////////////////
+//                                                                                               //
+//   KESİTLİK ÖRGÜSÜ s1.0.30                                                                      //
+//                                                                                               //
+//   Bu örgü "bölümleme düzeni", "esnetme düzeni", "sıralama düzeni", "aralama düzeni",          //
+//   "yineleme düzeni", "konumlama düzeni", "biçimleme düzeni" özellikleriyle oluşturulmuştur.   //
+//                                                                                               //
+///////////////////////////////////////////////////////////////////////////////////////////////////
+
 @import "dil-tr";
 @import "ayarlar";
 @import "sifirlama";
