--- a/_layouts/gunce.html
+++ b/_layouts/gunce.html
@@ -11,7 +11,7 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+    <h2 class="post-list-heading">{{ page.list_title | default: "Günceler" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
