--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,4 +1,4 @@
-<div class="" data-gnl="24 ortada göbekte">
+<div data-gnl="12 o">
   <ul class="menü-genel">
     <li><a href="https://discord.gg/GeaYaCb">Takım ve Takipçi Ortamı</a></li>
     <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a></li>
