--- a/assets/deveb-s1n0/_sifirlama.scss
+++ b/assets/deveb-s1n0/_sifirlama.scss
@@ -55,6 +55,14 @@
     h4{ font-size: 1.5em; }
     h5{ font-size: 1.3em; }
     h6{ font-size: 1.15em; }
+    @media screen and (max-width:760px){
+        h1{ font-size: 1.9em; }
+        h2{ font-size: 1.6em; }
+        h3{ font-size: 1.4em; }
+        h4{ font-size: 1.1em; }
+        h5{ font-size: 1em; }
+        h6{ font-size: .85em; }
+    }
 
     h1 + h2, h2 + h3, h3 + h4, h4 + h5, h5 + h6{
       margin-top: 0; }
