--- a/assets/deveb-s1n0/_ayarlar.scss
+++ b/assets/deveb-s1n0/_ayarlar.scss
@@ -1,3 +1,13 @@
+:root{
+	font-size: 16px;
+}
+
+@media screen and (max-width:760px){
+	:root{
+		font-size: 14px;
+	}
+}
+
 
 // GÖRÜNTÜLÜK ÖRGÜSÜ AYARLARI ////////////////////////////////////////////////////////////////
 
