--- a/assets/deveb-s1n0/_sifirlama.scss
+++ b/assets/deveb-s1n0/_sifirlama.scss
@@ -44,28 +44,21 @@
         -webkit-margin-after: 0;
         -webkit-margin-start: 0px;
         -webkit-margin-end: 0px;
-      margin: 1em 0 0.5em 0;
+      margin: 0 0 .5rem 0;
       color: #333;
-      font-weight: bold;  }
+      font-weight: 500;  }
 
 
-    h1{ font-size: 2.2em; }
-    h2{ font-size: 1.9em; }
-    h3{ font-size: 1.7em; }
-    h4{ font-size: 1.5em; }
-    h5{ font-size: 1.3em; }
-    h6{ font-size: 1.15em; }
-    @media screen and (max-width:760px){
-        h1{ font-size: 1.9em; }
-        h2{ font-size: 1.6em; }
-        h3{ font-size: 1.4em; }
-        h4{ font-size: 1.1em; }
-        h5{ font-size: 1em; }
-        h6{ font-size: .85em; }
-    }
+    h1{ font-size: 2.5rem }
+    h2{ font-size: 2.0rem }
+    h3{ font-size: 1.75rem }
+    h4{ font-size: 1.5rem }
+    h5{ font-size: 1.25rem }
+    h6{ font-size: 1rem }
 
-    h1 + h2, h2 + h3, h3 + h4, h4 + h5, h5 + h6{
-      margin-top: 0; }
+
+    h1 + p, h2 + p, h3 + p, h4 + p, h5 + p{
+      margin-top: 0 }
 
 
     img{
@@ -88,11 +81,8 @@
 
     /* Liste ayarları */
     ul{
-      padding: 0;
-      margin: 0;
 
       li{
-        list-style-type: none; 
         padding:0;
       }
 
@@ -103,4 +93,10 @@
       h1, h2, h3, h4, h5, h6
       {margin: 0;}
 
+    }
+
+    blockquote {
+        border-left: .2rem solid #e7e9ed;
+        margin-left: 0;
+        padding: .8rem 1.6rem;
     }
