--- a/assets/css/imge.css
+++ b/assets/css/imge.css
@@ -132,6 +132,13 @@ body {
 
 /* Yazı Özellikleri */
 
+#içerik * + h1,
+#içerik * + h2,
+#içerik * + h3,
+#içerik * + h4{
+  margin-top:.8rem;
+  margin-bottom:.4rem;
+}
 p {
   line-height: 1.5;
 }
