--- a/assets/css/imge.css
+++ b/assets/css/imge.css
@@ -194,8 +194,8 @@ p.örnek {
 }
 
 
-.örnek .önizleme div {
-  border: 1px solid #2c2171;
+.örnek .önizleme .kutu {
+  border: 1px solid #ffffff; /* #2c2171 */
   background-color: #4c41a1;
   padding: 10px;
   color: #eee;
