--- a/_includes/s1n0/dallik.html
+++ b/_includes/s1n0/dallik.html
@@ -1,138 +1,54 @@
 {%- assign veri = site.data.s1n0.dallik -%}
+{%- assign veri2 = site.data.s1n0.kesitlik-orgusu -%}
 {%- assign dil = page.lang -%}
 {%- assign surum = '1.0' -%}
 {%- assign yol = '/' | append: surum | append: '/' | append: dil | append: '/' -%}
-{%- assign anayol = '/' | append: surum | append: '/' | append: dil | append: '/' -%}
-{%- if page.url == anayol -%}
-  {%- assign baslangic-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].gunce.url -%}
-  {%- assign gunce-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kurulum.url -%}
-  {%- assign kurulum-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].goruntuluk-orgusu.url -%}
-  {% assign goruntuluk-orgusu-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kesitlik-orgusu.url -%}
-  {%- assign kesitlik-orgusu-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kesitlik-orgusu.bolumleme-duzeni.url -%}
-  {%- assign bolumleme-duzeni-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kesitlik-orgusu.yineleme-duzeni.url -%}
-  {%- assign yineleme-duzeni-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kesitlik-orgusu.esnetme-duzeni.url -%}
-  {%- assign esnetme-duzeni-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kesitlik-orgusu.aralama-duzeni.url -%}
-  {%- assign aralama-duzeni-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kesitlik-orgusu.bicimleme-duzeni.url -%}
-  {%- assign bicimleme-duzeni-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kesitlik-orgusu.konumlama-duzeni.url -%}
-  {%- assign konumlama-duzeni-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kesitlik-orgusu.siralama-duzeni.url -%}
-  {%- assign siralama-duzeni-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].kesitlik-orgusu.olcekler.url -%}
-  {%- assign olcekler-ise-etkin = "etkin" -%}
-{%- endif -%}
-{%- if page.url contains veri.[page.lang].dene.url -%}
-  {%- assign dene-ise-etkin = "etkin" -%}
-{%- endif -%}
+
 <nav>
-  <input  id="menü-ana" 
+  <input  id="dallık-ana" 
           type="radio" 
-          name="ana-menü" 
+          name="ana-dallık" 
           data-kapaç="çaprazlama gizle">
-  <label for="menü-ana">
+  <label for="dallık-ana">
     •••
   </label>
-  <label for="menü-ana-çapraz">
+  <label for="dallık-ana-çapraz">
     ///
   </label>
+  <ul class="imge" data-menü="görünür dikey">    
 
-  <ul class="imge" data-menü="görünür dikey">
-    <li class="{{baslangic-ise-etkin}}">
-      <a href="{{yol}}{{veri.[page.lang].baslangic.url}}">
-        {{ veri.[page.lang].baslangic.ad }}
-      </a>
-    </li>
-    <li class="{{kurulum-ise-etkin}}">
-      <a href="{{yol}}{{veri.[page.lang].kurulum.url}}">
-        {{ veri.[page.lang].kurulum.ad }}
-      </a>
-    </li>
-    <li class="{{goruntuluk-orgusu-ise-etkin}}">
-      <a href="{{yol}}{{veri.[page.lang].goruntuluk-orgusu.url}}">
-        {{ veri.[page.lang].goruntuluk-orgusu.ad }}
-      </a>
-    </li>
-    <li class="{{kesitlik-orgusu-ise-etkin}}">
-      <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.url}}">
-        {{ veri.[page.lang].kesitlik-orgusu.ad }}
-      </a>
-      <input id="kesitlik-örgüsü" type="checkbox" data-kapaç="sağda"
-             {% if kesitlik-orgusu-ise-etkin == 'etkin' %}checked{% endif %}>
-      <label for="kesitlik-örgüsü"><span>▽</span></label>
-      <label for="kesitlik-örgüsü"><span>▼</span></label>
-      <ul>
-        <li class="{{bolumleme-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.bolumleme-duzeni.url}}">
-            {{ veri.[page.lang].kesitlik-orgusu.bolumleme-duzeni.ad }}
-          </a>
-        </li>
-        <li class="{{yineleme-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.yineleme-duzeni.url}}">
-            {{ veri.[page.lang].kesitlik-orgusu.yineleme-duzeni.ad }}
-          </a>
-        </li>
-        <li class="{{esnetme-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.esnetme-duzeni.url}}">
-            {{ veri.[page.lang].kesitlik-orgusu.esnetme-duzeni.ad }}
-          </a>
-        </li>
-        <li class="{{aralama-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.aralama-duzeni.url}}">
-            {{ veri.[page.lang].kesitlik-orgusu.aralama-duzeni.ad }}
-          </a>
-        </li>
-        <li class="{{bicimleme-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.bicimleme-duzeni.url}}">
-            {{ veri.[page.lang].kesitlik-orgusu.bicimleme-duzeni.ad }}
-          </a>
-        </li>
-        <li class="{{konumlama-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.konumlama-duzeni.url}}">
-            {{ veri.[page.lang].kesitlik-orgusu.konumlama-duzeni.ad }}
-          </a>
-        </li>
-        <li class="{{siralama-duzeni-ise-etkin}}">
-          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.siralama-duzeni.url}}">
-            {{ veri.[page.lang].kesitlik-orgusu.siralama-duzeni.ad }}
-          </a>
-        </li>
-        <li class="{{olcekler-ise-etkin}}">
-          <a href="{{yol}}{{veri.[page.lang].kesitlik-orgusu.olcekler.url}}">
-            {{ veri.[page.lang].kesitlik-orgusu.olcekler.ad }}
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li class="{{dene-ise-etkin}}">
-      <a href="{{veri.[page.lang].dene.url}}">
-        {{ veri.[page.lang].dene.ad }}
-      </a>
-    </li>
-    <li class="{{gunce-ise-etkin}}">
-      <a href="/{{veri.[page.lang].gunce.url}}">
-        {{ veri.[page.lang].gunce.ad }}
-      </a>
-    </li>
+    {% for dal in veri2[dil] %}
+      {%- assign anayol = yol | append: dal[1].url -%}
+      <li class="
+      {%- if yol == anayol and page.url == anayol -%}
+        etkin
+      {%- elsif page.url contains anayol and yol != anayol -%}
+        etkin
+      {%- endif -%}">
+        <a href="{%- if dal[1].urletkin == 1 -%}{%- else -%}{{yol}}{%- endif -%}{{dal[1].url}}">
+          {{dal[1].ad}}</a>
+
+        {%- if dal[1].alt -%}
+
+          <input id="{{dal[1].url}}" type="checkbox" data-kapaç="sağda"
+                 {%- if page.url contains anayol -%}checked{% endif %}>
+          <label for="{{dal[1].url}}"><span>▽</span></label>
+          <label for="{{dal[1].url}}"><span>▼</span></label>
+
+          <ul>
+          {% for altta in dal[1].alt %}
+            <li class="{%- if page.url contains altta[1].url -%}etkin{%- endif -%}">
+              <a href="{%- if altta[1].urletkin == 1 -%}{%- else -%}{{yol}}{%- endif -%}{{altta[1].url}}">
+              {{altta[1].ad}}</a>            
+            </li>
+          {% endfor %}
+          </ul>
+
+        {%- endif -%}
+      </li>
+
+    {% endfor %}    
+
   </ul>
 </nav>
+
