--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
 
       <div data-gnl="6 %" data-ort="12">
         <a href="/" class="logo2" data-gnl="0">deveb</a>
-        <input id="menü-ana-çapraz" checked type="radio" name="ana-menü" data-kapaç="sağda çaprazlama">
-        <label for="menü-ana">☰</label>
-        <label for="menü-ana-çapraz">❌</label>
+        <input id="dallık-ana-çapraz" checked type="radio" name="ana-dallık" data-kapaç="sağda çaprazlama">
+        <label for="dallık-ana">☰</label>
+        <label for="dallık-ana-çapraz">❌</label>
       </div>
 
       <div data-düğme="öbek" data-gnl="0" data-ort="1 /">
