--- a/assets/deveb/s1n0/deveb.scss
+++ b/assets/deveb/s1n0/deveb.scss
@@ -12,6 +12,8 @@
 @import "altlik/sifirlama";
 @import "altlik/capraz-tarayici";
 @import "orguler/kesitlik-orgusu";
+@import "orguler/icerik-orgusu";
+@import "orguler/dal-orgusu";
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 // NOTLAR
