sekme örgüsü dosyaları etkinleştirildi

--- a/assets/deveb/s1n0/deveb.scss
+++ b/assets/deveb/s1n0/deveb.scss
@@ -14,6 +14,7 @@
 @import "orguler/kesitlik-orgusu";
 @import "orguler/icerik-orgusu";
 @import "orguler/dal-orgusu";
+@import "orguler/sekme-orgusu";
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 // NOTLAR
