ilker tasarımı güncellendi

--- a/_includes/ilker/taban.html
+++ b/_includes/ilker/taban.html
@@ -1,11 +1,11 @@
-<div data-gnl="1 1p ortada">
-  <ul data-menü="basit yatay" data-gnl="1 1p ortada">
+<div data-gnl="o">
+  <ul data-menü="basit yatay" data-gnl="o">
     <li><a href="#">DEVEB</a></li>
     <li><a href="#">HTML5</a></li>
     <li><a href="#">CSS3</a></li>
     <li><a href="#">TEMALAR</a></li>
   </ul>
 </div>
-<div data-gnl="1 1p ortada">
+<div data-gnl="o">
   Bu tema deveb geliştiricileri tarafından yapılmıştır.
 </div>
