--- a/_includes/ilker/baslangic.html
+++ b/_includes/ilker/baslangic.html
@@ -4,7 +4,7 @@
 <title>{{title}}</title>
 
 <!-- Kök -->
-<link href="/temalar/ilker/assets/css/deveb.css" rel="stylesheet">
+<link rel="stylesheet" href="{{ "/assets/deveb/s1n0/deveb.css" | relative_url }}">
 <link href="/temalar/ilker/assets/css/ilker.css" rel="stylesheet">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
