--- a/temalar/ilker/assets/css/ilker.css
+++ b/temalar/ilker/assets/css/ilker.css
@@ -1,3 +1,9 @@
+html{
+  font-family: 'Roboto', sans-serif;
+  font-size: 14.5px;
+  color: #24292E;
+}
+
 /* MENÜ İMGESİ */
 @media screen and (max-width:576px) {
   body{
