--- a/assets/deveb/s1n0/orguler/_kesitlik-orgusu.scss
+++ b/assets/deveb/s1n0/orguler/_kesitlik-orgusu.scss
@@ -355,9 +355,8 @@
     flex: 1 1 0 !important;
     overflow: auto;
     width:100%;
-    height:100%;
+    min-height:100vh;
     flex-direction: column;
-    position: fixed;
   }
 
   body[data-#{$görüntülük}~="#{$sütun}"] > footer,
