--- a/temalar/ilker/assets/css/ilker.css
+++ b/temalar/ilker/assets/css/ilker.css
@@ -2,6 +2,11 @@ html{
   font-family: 'Roboto', sans-serif;
   font-size: 14.5px;
   color: #24292E;
+  line-height: 1.7;
+  color: #6d6d6d;
+}
+p{
+
 }
 
 /* MENÜ İMGESİ */
@@ -15,7 +20,9 @@ html{
   }
 
 }
-
+header{
+  border-bottom:1px solid #eee;
+}
 footer{
   padding-top:30px;
   padding-bottom:30px;
@@ -80,4 +87,24 @@ label[for="menü-0by"]{
 .alan > div > p{
   text-align: center;
   font-size:14px;
+}
+
+
+.blog-kart{
+  box-shadow: 0 15px 30px 0 rgba(0,0,0,.11),0 5px 15px 0 rgba(0,0,0,.08);
+  border-radius: .25rem;
+  color: #22292f;
+  font-family: Source Sans Pro,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue;
+  overflow: hidden;
+}
+
+.blog-kart > div{
+  padding:10px;
+}
+.blog-kart > div > h1{
+  font-size:1.5em;
+}
+.blog-kart > div > p + p{
+  border-top:1px solid #eee;
+  margin:0;
 }
