Karşılama sayfası değiştirildi.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,10 +15,12 @@
               İşte bu! Yepyeni bir önyüz çatısı buldunuz. Ağ (web) sayfalarını tasarlarken deveb'in oluşturduğu özelliklerden yararlanın. Tüm uygulamalarınızı kapsamlı bileşenleri ile kolayca yapmaya başlayın. Görüntülük örgüsü, kesitlik örgüsü, renk örgüsü ve dahası İngilizce
               ve Türkçe olmak üzere iki dil desteği ile sizi bekliyor.
             </p>
-            <p class="metin-gri-3 beri-2" data-gnl="o">
-              <a data-bağ="genel" href="/0.1/">DEVEB 0.1</a>&nbsp;
-              <a data-bağ="genel" href="/1.0/tr/">DEVEB öncü.1.0</a>&nbsp;
-              <a data-bağ="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
+            <p class="metin-gri-3" data-gnl="metin-ortada">
+              
+              <a data-bağ="genel" href="/1.0/tr/"><b>Başla</b></a>
+              <a data-bağ="genel" href="https://www.facebook.com/groups/1818283228485179/"><b>Katıl</b></a>
+              <br><br>
+              Eski sürümler: <a style="color:#999" href="/0.1/"><b>0.1</b></a><br><br>
             </p>
           </div>
         </div>
