p etiketi varsayılanı değiştirildi.
data-gnl yazılınca flex etkisi altına giriyordu. Bu etki ezildi.

--- a/assets/deveb/s1n0/altlik/_sifirlama.scss
+++ b/assets/deveb/s1n0/altlik/_sifirlama.scss
@@ -70,8 +70,9 @@
 
     /* Paragraf ayarları */
     p{
-      display: block;
-      width: 100%;  }
+      display: block !important;
+      width: 100%;  
+    }
 
     p + p{
         /* İki paragraf arasına mesafe verme ayarı */
