ulu, ufk görüntülükler çıkarıldı

--- a/assets/deveb/s1n0/diller/_dil-tr.scss
+++ b/assets/deveb/s1n0/diller/_dil-tr.scss
@@ -55,9 +55,9 @@ $uzun-ol: uzun-ol;
 $satırda: satırda;
 $satırda-ol: satırda-ol;
 
-$metin-sağda: metin-sağda;
-$metin-ortada: metin-ortada;
-$metin-solda: metin-solda;
+$yazı-sağda: metin-sağda;
+$yazı-ortada: metin-ortada;
+$yazı-solda: metin-solda;
 
 $sol: l;
 $sağ: s;
